<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMessageActivity" >

    <CheckBox
        android:id="@+id/checkBoxDegCelc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celcius_full"
        android:textSize="@dimen/normal_text_size" />

    <CheckBox
        android:id="@+id/checkBoxLocalNet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_net_str"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_string"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|textWebEditText"
            android:textSize="@dimen/normal_text_size" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_str"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:onClick="BtnCancelOnClick"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="BtnOkOnClick"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>